funcionalidad agregar difunto
funcionalidad agregar difunto, creacion de vista, controlador y servicio

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   <script src="./app.js"></script>
   <script src="./route.js"></script>
   <!-- Servicios de la aplicacion -->
- 
+  <script src="./components/servicios/difuntos.servicio.js"></script>
 </body>
 
 </html>
