--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
   <script src="./app.js"></script>
   <script src="./route.js"></script>
   <!-- Servicios de la aplicacion -->
+  <script src="./components/servicios/usuario.service.js"></script>
  
 </body>
 
