difuntos.service.js
Se cambio el nombre de difuntos.servicio.js a difuntos.service.js por estandares de programacion y eventualmente se cambio el enlace del script en el index.html

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   <script src="./app.js"></script>
   <script src="./route.js"></script>
   <!-- Servicios de la aplicacion -->
-  <script src="./components/servicios/difuntos.servicio.js"></script>
+  <script src="./components/servicios/difuntos.service.js"></script>
   <script src="./components/servicios/usuario.service.js"></script>
  
 </body>
