--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,8 @@
   <script src="./components/servicios/usuario.service.js"></script>
   <script src="./components/servicios/autenticacion/autenticacion.service.js"></script>
   <script src="./components/servicios/autenticacion/sesion.service.js"></script>
+
+  <script src="./components/servicios/animador.service.js"></script>
 </body>
 
 </html>
