Terminadas funcionalidades, administracion de animadores, fiestas
Terminadas funcionalidades, administracion de animadores, fiestas, con su respectiva vista controlador y servicio

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
   <script src="./lib/angular/routing/angular-ui-router.min.js"></script>
   <script src="./lib/angular/routing/ocLazyLoad.min.js"></script>
   <script src="./lib/angular/routing/page-title.min.js"></script>
+  <script src="./lib/moment/moment.js"></script>
   <!-- Script de la aplicación -->
   <script src="./clases.js"></script>
   <script src="./app.js"></script>
@@ -42,6 +43,8 @@
   <script src="./components/servicios/autenticacion/sesion.service.js"></script>
 
   <script src="./components/servicios/animador.service.js"></script>
+
+  <script src="./components/servicios/fiesta.service.js"></script>
 </body>
 
 </html>
