Agregar funcionalidad de retoques
Agregar funcionalidad de retoques, controlador, vista, servicio para administrar retoques  agregarlos al difunto seleccionado y removerlos del mismo

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
   <script src="./components/servicios/animador.service.js"></script>
 
   <script src="./components/servicios/fiesta.service.js"></script>
+
+  <script src="./components/servicios/retoques.service.js"></script>
 </body>
 
 </html>
