--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./lib/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="./lib/bootstrap/bootstrap-social.css">
   <!-- Estilo Generales -->
+  <link rel="stylesheet" href="./components/generalStyles.css">
 
 </head>
 
