--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
   <script src="./components/servicios/usuario.service.js"></script>
   <script src="./components/servicios/autenticacion/autenticacion.service.js"></script>
   <script src="./components/servicios/autenticacion/sesion.service.js"></script>
+  <script src="./components/servicios/animador.service.js"></script>
+  <script src="./components/servicios/fiesta.service.js"></script>
+  <script src="./components/servicios/retoques.service.js"></script>
 </body>
 
 </html>
